Containerization of bridges opening and closing every 10 seconds