@@ -40,6 +40,11 @@
             <artifactId>postgresql</artifactId>
         </dependency>
         <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>1.4.200</version>
@@ -118,6 +123,9 @@
                                         <resource>
                                             <directory>${project.basedir}/../../bl-simulation-data</directory>
                                         </resource>
+                                        <resource>
+                                            <directory>${project.basedir}/bl-simulation-data</directory>
+                                        </resource>
                                     </resources>
                                 </configuration>
                             </execution>
@@ -133,6 +141,17 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>2.2.6.RELEASE</version>
+                <configuration>
+                    <jvmArguments>--enable-preview</jvmArguments>
+                    <mainClass>org.jesperancinha.logistics.web.BridgeLogisticsApplication</mainClass>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
